--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,8 +46,8 @@ jobs:
     - name: Deploy to AWS EC2
       uses: appleboy/ssh-action@master
       with:
-        host: ec2-15-164-212-128.ap-northeast-2.compute.amazonaws.com
-        username: ec2-user
+        host: ${{ secrets.AWS_HOST }}
+        username: ${{ secrets.AWS_USERNAME }}
         key: ${{ secrets.AWS_PEM }}
         envs: GITHUB_SHA
         script: |
